Remove enable preview flag now that JDK is upgraded from 16->17